--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
                     <!--Logo-->
                     <div id="logo">
                         <a href="index.html">
-                            <span class="logo-default"><img src="customImages/logos/logo-black.png"
+                            <span class="logo-default"><img src="images/logos/logo-black.png"
                                     style="width: 9rem;"></span>
-                            <span class="logo-dark"><img src="customImages/logos/logo-white.png"
-                                    style="width: 9rem;"></span>
+                            <span class="logo-dark"><img src="images/logos/logo-white.png" style="width: 9rem;"></span>
                         </a>
                     </div>
                     <!--End: Logo-->
@@ -308,7 +307,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="200">
                             <div class="team-image">
-                                <img src="customImages/logos/Geraldine Mlynarz.jpg" alt="Geraldine Mlynarz">
+                                <img src="images/profiles/Geraldine-Mlynarz.webp" alt="Geraldine Mlynarz">
                             </div>
                             <div class="team-desc">
                                 <h3>Geraldine Mlynarz</h3>
@@ -320,7 +319,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="400">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00882 Ana María Sandino.jpg" alt="Ana María Sandino">
+                                <img src="images/profiles/DSC00882-Ana-María-Sandino.webp" alt="Ana María Sandino">
                             </div>
                             <div class="team-desc">
                                 <h3>Dr. Ana María Sandino</h3>
@@ -332,7 +331,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="600">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00876 Alicia Lucero.jpg" alt="Alicia Lucero">
+                                <img src="images/profiles/DSC00876-Alicia-Lucero.webp" alt="Alicia Lucero">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra. Alicia Lucero</h3>
@@ -347,7 +346,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="800">
                             <div class="team-image">
-                                <img src="customImages/logos/Copia de DSC02253 Camila Wilkens.jpg" alt="Camila Wilkens">
+                                <img src="images/profiles/DSC02253-Camila-Wilkens.webp" alt="Camila Wilkens">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra. Camila Wilkens</h3>
@@ -359,8 +358,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="1000">
                             <div class="team-image">
-                                <img src="customImages/logos/Copia de DSC02220 Debbie Weinstein.jpg"
-                                    alt="Debbie Weinstein">
+                                <img src="images/profiles/DSC02220-Debbie-Weinstein.webp" alt="Debbie Weinstein">
                             </div>
                             <div class="team-desc">
                                 <h3>Debbie Weinstein</h3>
@@ -385,7 +383,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="200">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00882 Ana María Sandino.jpg">
+                                <img src="images/profiles/DSC00882-Ana-María-Sandino.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra. Ana María Sandino</h3>
@@ -396,7 +394,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="400">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC01141 Dr. Mario Tello.jpg">
+                                <img src="images/profiles/DSC01141-Dr.-Mario-Tello.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dr. Mario Tello</h3>
@@ -407,7 +405,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="600">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC01136 Mónica Imarai.jpg">
+                                <img src="images/profiles/DSC01136-Mónica-Imarai.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra Mónica Imarai</h3>
@@ -417,7 +415,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="800">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00736 Brenda Modak.jpg">
+                                <img src="images/profiles/DSC00736-Brenda-Modak.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra. Brenda Modak</h3>
@@ -441,7 +439,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="200">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00766 Deborah Vargas.jpg">
+                                <img src="images/profiles/DSC00766-Deborah-Vargas.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dra. Deborah Vargas</h3>
@@ -452,7 +450,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="400">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00749 Leonel Rojo.jpg">
+                                <img src="images/profiles/DSC00749-Leonel-Rojo.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dr. Leonel Rojo</h3>
@@ -462,7 +460,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="600">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00784 Mick Parra.jpg">
+                                <img src="images/profiles/DSC00784-Mick-Parra.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Mick Parra</h3>
@@ -472,7 +470,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="800">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00812 Claudio Acuña.jpg">
+                                <img src="images/profiles/DSC00812-Claudio-Acuña.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dr. Claudio Acuña</h3>
@@ -482,7 +480,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="1000">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC00852 Javier Mena.jpg">
+                                <img src="images/profiles/DSC00852-Javier-Mena.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Javier Mena</h3>
@@ -492,7 +490,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="1200">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC01184 Kevin Maisey.jpg">
+                                <img src="images/profiles/DSC01184-Kevin-Maisey.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Dr. Kevin Maisey</h3>
@@ -502,7 +500,7 @@
                     <div class="col-lg-3">
                         <div class="team-member" data-animate="fadeIn" data-animate-delay="1400">
                             <div class="team-image">
-                                <img src="customImages/logos/DSC01594 Felipe Reyes.jpg">
+                                <img src="images/profiles/DSC01594-Felipe-Reyes.webp">
                             </div>
                             <div class="team-desc">
                                 <h3>Felipe Reyes</h3>
@@ -523,25 +521,25 @@
                         <ul class="grid grid-5-columns co-ejecutores">
                             <li>
                                 <a href="https://ictiobiotech.cl" target="_blank"><img alt=""
-                                        src="customImages/logos/ICTIO.png"></a>
+                                        src="images/logos/ICTIO.png"></a>
                             </li>
 
                             <li>
                                 <a href="https://www.riolab.com" target="_blank"><img alt=""
-                                        src="customImages/logos/Riolab.png"></a>
+                                        src="images/logos/Riolab.png"></a>
                             </li>
                             <li>
                                 <a href="https://www.usach.cl" target="_blank"><img alt=""
-                                        src="customImages/logos/Logo USACH Negro.png"></a>
+                                        src="images/logos/Logo USACH Negro.png"></a>
                             </li>
                             <li>
                                 <a href="https://newgenesis.cl" target="_blank"><img alt=""
-                                        src="customImages/logos/Logo New Genesis Negro.png"></a>
+                                        src="images/logos/Logo New Genesis Negro.png"></a>
 
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/villasecaabogados/posts" target="_blank"><img
-                                        alt="" src="customImages/logos/Logo Villaseca.png"></a>
+                                        alt="" src="images/logos/Logo Villaseca.png"></a>
                             </li>
                         </ul>
                     </div>
