--- a/noticias.html
+++ b/noticias.html
@@ -22,10 +22,9 @@
                     <!--Logo-->
                     <div id="logo">
                         <a href="index.html">
-                            <span class="logo-default"><img src="customImages/logos/logo-black.png"
+                            <span class="logo-default"><img src="images/logos/logo-black.png"
                                     style="width: 9rem;"></span>
-                            <span class="logo-dark"><img src="customImages/logos/logo-white.png"
-                                    style="width: 9rem;"></span>
+                            <span class="logo-dark"><img src="images/logos/logo-white.png" style="width: 9rem;"></span>
                         </a>
                     </div>
                     <!--End: Logo-->
