--- a/index.html
+++ b/index.html
@@ -370,6 +370,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-3">
+                        <div class="team-member" data-animate="fadeIn" data-animate-delay="1000">
+                            <div class="team-image">
+                                <img src="images/profiles/DSC00833-Victor-Lazo.webp" alt="Victor Lazo">
+                            </div>
+                            <div class="team-desc">
+                                <h3>Víctor Lazo</h3>
+                                <span>Gerente Técnico USACH</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
