--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 <img src="images/profiles/DSC00882-Ana-María-Sandino.webp" alt="Ana María Sandino">
                             </div>
                             <div class="team-desc">
-                                <h3>Dr. Ana María Sandino</h3>
+                                <h3>Dra. Ana María Sandino</h3>
                                 <span>Directora Alterna</span>
                             </div>
                         </div>
@@ -376,7 +376,7 @@
                                 <img src="images/profiles/DSC00833-Victor-Lazo.webp" alt="Victor Lazo">
                             </div>
                             <div class="team-desc">
-                                <h3>Víctor Lazo</h3>
+                                <h3>Dr. Víctor Lazo</h3>
                                 <span>Gerente Técnico USACH</span>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                 <img src="images/profiles/DSC01136-Mónica-Imarai.webp">
                             </div>
                             <div class="team-desc">
-                                <h3>Dra Mónica Imarai</h3>
+                                <h3>Dra. Mónica Imarai</h3>
                             </div>
                         </div>
                     </div>
@@ -498,7 +498,7 @@
                                 <img src="images/profiles/DSC00852-Javier-Mena.webp">
                             </div>
                             <div class="team-desc">
-                                <h3>Javier Mena</h3>
+                                <h3>Dr. Javier Mena</h3>
                             </div>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                                 <img src="images/profiles/DSC01594-Felipe-Reyes.webp">
                             </div>
                             <div class="team-desc">
-                                <h3>Felipe Reyes</h3>
+                                <h3>Dr. Felipe Reyes</h3>
                             </div>
                         </div>
                     </div>
